--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,11 @@
     margin: 0;
     border: 0;
     box-sizing: border-box;
+    background: #202733;
   }
   
   body {
     height: 100vh;
     width: 100vw;
+
   }
